re PR target/34435 (SSE2 intrinsics - emmintrin with optimisations off and type conversion error)

2007-12-06  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/34435
	* module.c (find_symbol): Do not return symtrees with unique
	names, which shows that they are private.

2007-12-06  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/34435
	* gfortran.dg/used_types_19.f90: New test.

From-SVN: r130642